# sparklers

./: .gitignore  Cargo.toml  README.md  build.rs
crates/sparkle-build/: Cargo.toml  build.rs
crates/sparkle-find-framework/: Cargo.toml
crates/sparkle-sys/: Cargo.toml  build.rs
crates/sparkle-sys/src/: lib.rs  notifications.rs
crates/sparklers-build/: Cargo.toml  build.rs
crates/sparklers-build/src/: lib.rs
crates/sparklers-find-framework/: Cargo.toml
crates/sparklers-find-framework/src/: lib.rs
crates/sparklers-sys/: Cargo.toml  build.rs
crates/sparklers-sys/src/: keys.rs  updater.rs
examples/basic/: Cargo.toml  Info.plist  build.rs
examples/basic/src/: main.rs
src/: commands.rs  error.rs  events.rs  lib.rs
src/sparkle/: delegate.rs  mod.rs  updater.rs
