[package]
name = "sparklers"
version.workspace = true
description = "Safe, ergonomic Rust bindings to the Sparkle application update framework for macOS"
authors.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sparklers"
readme = "README.md"
keywords = ["sparkle", "updater", "macos"]
categories = ["gui", "os::macos-apis"]
edition = "2021"
rust-version = "1.77.2"

[workspace]
members = ["crates/sparklers-sys", "crates/sparklers-build", "crates/sparklers-find-framework", "examples/basic"]

[workspace.package]
version = "0.1.0"
authors = ["ahonn <ahonn95@outlook.com>", "Slint Developers <info@slint.dev>"]
repository = "https://github.com/slint-ui/sparklers"
homepage = "https://github.com/slint-ui/sparklers"

[workspace.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSDictionary", "NSURL", "NSBundle", "NSError", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
dispatch2 = "0.3"
sparklers = { path = ".", version = "0.1.0" }
sparklers-build = { path = "crates/sparklers-build", version = "0.1.0" }

[dependencies]
thiserror = "2"
url = "2"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
sparklers-sys = { path = "crates/sparklers-sys", version = "0.1.0" }
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
dispatch2.workspace = true

[profile.dev]
rpath = true

[profile.release]
rpath = true
