[package]
name = "sparkle-build"
version.workspace = true
description = "Build script helpers for `sparklers`"
authors.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
edition = "2024"

[build-dependencies]
sparkle-find-framework = { path = "../sparkle-find-framework", version = "0.1" }
