[package]
name = "sparkle-sys"
version.workspace = true
description = "Low-level bindings to the Sparkle application update framework for macOS"
authors.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
edition = "2024"
links = "sparkle-sys"

[build-dependencies]
git2 = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
