[package]
name = "sparklers-build"
version.workspace = true
description = "Build script helpers for `sparklers`"
authors.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
edition = "2024"

[build-dependencies]
sparklers-find-framework = { path = "../sparklers-find-framework", version = "0.1" }
