[package]
name = "sparklers-sys"
version.workspace = true
description = "Low-level bindings to the Sparkle application update framework for macOS"
authors.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
edition = "2024"
links = "Sparkle.framework"

[build-dependencies]
sparklers-find-framework = { path = "../sparklers-find-framework", version = "0.1" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
