[package]
name = "sparklers-basic-example"
version.workspace = true
description = "Basic example for sparklers"
authors.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation.workspace = true
sparklers.workspace = true
dispatch2.workspace = true
embed_plist = "1.2"

[build-dependencies]
sparkle-build.workspace = true
